[project]
python = "^3.8"

[tool.poetry]
name = "nhs-eps-spine-client"
description = "A middy error handler for FHIR Lambdas"
version = "0.0.1-alpha"
authors = [
  "Anthony Brown <anthony.brown8@nhs.net>",
  "Matthew Popat <matthew.popat1@nhs.net>",
  "Kris Szlapa <kris.szlapa1@nhs.net>",
  "Jack Spagnoli <jack.spagnoli1@nhs.net>",
]
readme = "README.md"
license = "MIT"
repository = "https://github.com/NHSDigital/nhs-eps-spine-client"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pip-licenses = "^4.3.3"
pre-commit = "^3.5.0"

[tool.poetry.scripts]
